[gd_scene load_steps=16 format=2]

[ext_resource path="res://menus/main-menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://menus/mode-select/ModeSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/openingtitle.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/permanent_marker-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://gameplay/camera/Camera.gd" type="Script" id=5]
[ext_resource path="res://gameplay/hud/BackIndicator.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/images/Hook_logo_out.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/sfx/intro_title.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/press_start.wav" type="AudioStream" id=9]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform sampler2D gradient : hint_black;
uniform float freq = .5;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	float gray = dot(color.rgb, vec3(.299, .587, .114));
	float gradient_x = gray + sin(freq * TIME);
	gradient_x = mod(gradient_x, 1.0);
	vec3 sampled_color = texture(gradient, vec2(gradient_x, 0)).rgb;
	
	COLOR.rgb = sampled_color.rgb;
	COLOR.a = color.a;
}"

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.07, 0.097, 0.237, 0.263, 0.403, 0.43, 0.57, 0.597, 0.737, 0.763, 0.903, 0.93 )
colors = PoolColorArray( 0.905882, 0, 0, 1, 1, 0.54902, 0, 1, 1, 0.54902, 0, 1, 1, 0.937255, 0, 1, 1, 0.937255, 0, 1, 0, 0.505882, 0.121569, 1, 0, 0.505882, 0.121569, 1, 0, 0.266667, 1, 1, 0, 0.266667, 1, 1, 0.462745, 0, 0.537255, 1, 0.462745, 0, 0.537255, 1, 0.905882, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/freq = 0.2
shader_param/gradient = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 72
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
ModeSelect = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1800.0
margin_top = -1012.5
margin_right = 1800.0
margin_bottom = 1012.5
texture = ExtResource( 3 )

[node name="PressStart" type="Label" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -209.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 8
text = "Press
Start"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PressStart"]
anims/show = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenGlow" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
rotating = true
current = true
limit_left = 0
limit_top = 0
script = ExtResource( 5 )

[node name="PressStartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BackIndicator" parent="." instance=ExtResource( 6 )]

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -354.0
margin_right = 707.0
margin_bottom = 354.0
rect_rotation = 30.0
rect_pivot_offset = Vector2( 553, 354 )
texture = ExtResource( 7 )

[node name="TitleSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="StartPressSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[connection signal="timeout" from="PressStartTimer" to="." method="_on_PressStartTimer_timeout"]
